# Client-server

Server/: CMakeLists.txt
Server/TCP/Headers/: serverTCP.hpp
Server/TCP/Sources/: serverTCP.cpp
Server/UDP/Headers/: serverUDP.hpp
Server/UDP/Sources/: serverUDP.cpp
Socket/: CMakeLists.txt
Socket/TCP/Headers/: socketTCP.hpp
Socket/TCP/Sources/: socketTCP.cpp
Socket/UDP/Headers/: socketUDP.hpp
Socket/UDP/Sources/: socketUDP.cpp
StartUp/Client/: CMakeLists.txt  main.cpp
StartUp/Server/: CMakeLists.txt  main.cpp
